# CodexIOL

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  AsesorFinanciero.md  CLAUDE.md  Dockerfile  README.md  docker-compose.frontend.yml  docker-compose.yml  pyproject.toml  tests_support.py
data/: README.md
docs/: INDEX.md  Runbook_Oportunidades_Semanal.md  frontend-style-guide.md  refactor_inventory.md
frontend/: .gitignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  tailwind.config.ts
prompts/: 00_orquestador.md  10_context_pack.md  20_portfolio_analysis.md  30_macro_sources.md  32_regime_engine.md  35_expert_consensus.md  37_smart_money.md  40_symbol_web_research.md  45_opportunity_scoring.md  50_alerts_events.md  60_safe_execution.md  70_advisor_daily_automation.md  80_advisor_weekly_automation.md
reports/: README.md
scripts/: check_docs.ps1  find_btc_proxy.py  install_startup_task.ps1  organize_outputs.ps1  rebalance_plan.py  scheduler_entrypoint.sh  search_cedears.py  startup.ps1  uninstall_startup_task.ps1
tests/: test_advisor_alerts_events.py  test_advisor_autopilot.py  test_advisor_context.py  test_advisor_opportunities.py  test_architecture_boundaries.py  test_batch.py  test_cli_cashflow.py  test_cli_reconciliation.py  test_event_simulation.py  test_evidence_fetch.py  test_movements.py  test_reconciliation.py  test_swing_simulation.py  test_web_advisor_api.py  test_web_asset_performance_api.py  test_web_cashflows_auto.py  test_web_inflation_compare.py  test_web_inflation_time_series.py  (+14 more)
(+163 files in other folders)
