[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iol-cli"
version = "0.1.0"
description = "CLI for InvertirOnline API"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
]

[project.scripts]
iol = "iol_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ensure Jinja templates and static assets ship with the package.
iol_web = ["templates/*.html", "static/*"]
